# mr_robot

./: .gitignore  Makefile  docker-compose.yml  pyproject.toml
app/: client.py  main.py  server.py  test_plot.py
app/infra/grpc/protos/: test.proto  test_pb2.py  test_pb2.pyi  test_pb2_grpc.py
app/settings/: base.py  comfig.py
